Fixing position of aff new book form on mobile devices

--- a/style.css
+++ b/style.css
@@ -327,8 +327,8 @@ footer{
     #addBookForm{
         z-index: 2;
         position: fixed;
-        top: 50%;
-        left:50%;
+        top: 20%;
+        left:35%;
         border: 1px solid black;
         background-color: azure;
     }
